<resources>
    <string name="app_name">Course Project</string>
    <string name="darrel_steward">Darrel Steward</string>
    <string name="lorem_ipsum">Привет! lorem ipsum test message dalshe zabil Привет! lorem ipsum test message dalshe zabil</string>
    <string name="write">Написать…</string>
    <string name="feb1">1 фев</string>
    <string name="channels">channels</string>
    <string name="profile">profile</string>
    <string name="people">people</string>
    <string name="search">Search…</string>
    <string name="subscribed">Subscribed</string>
    <string name="All_streams">All streams</string>
    <string name="topic_name">#topic name</string>
    <string name="count">count</string>
    <string name="darrell_steward">Darrell Steward</string>
    <string name="darrel_email">darrel@company.com</string>
    <string name="users">Users…</string>
    <string name="avatar">avatar</string>
    <string name="online">online</string>
    <string name="in_a_meeting">In a meeting</string>
    <string name="log_out">Log out</string>
    <string name="profile_photo">profile photo</string>
    <string name="imageavatar">imageAvatar</string>
    <string name="mes_short">\ mes</string>
    <string name="arrow">arrow</string>
    <string name="create_new_channel">Create new channel</string>
    <string name="channel_name">Channel name:</string>
    <string name="create">Create</string>
    <string name="channel_description">Channel description:</string>
    <string name="email">email…</string>
    <string name="name">name…</string>
    <string name="description">description…</string>
    <string name="no_channel">No channel…</string>
    <string name="channel_already_exist">Channel already exist!</string>
    <string name="error_while_creating">Error while creating</string>
    <string name="channel_created">Channel created</string>
    <string name="retry">retry</string>
    <string name="error_while_loading_topics">error while loading topics!</string>
    <string name="error_while_channels_loading">error while channels loading!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_reaction">Add reaction</string>
    <string name="copy">Copy</string>
    <string name="error_while_deleting">Error while deleting!</string>
    <string name="deleted">Deleted</string>
    <string name="edit_message_unknown_error">Unknown error while editing!</string>
    <string name="message_edited">Edited</string>
    <string name="error">Error!</string>
    <string name="this_message_is_not_your">This message is not your</string>
    <string name="error_with_database">Error with database!</string>
    <string name="edit_message_late_error">You can`t edit message after 10 minutes!</string>
    <string name="fabscrolldown">fabScrollDown</string>

</resources>