<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/nav_elements_bg"
    tools:context=".presentation.messenger.EmojiBottomSheet">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcEmojis"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottomSheetMenu"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddReaction"
            style="@style/button_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_reaction"
            app:icon="@drawable/ic_add_reaction" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDeleteMessage"
            style="@style/button_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:icon="@drawable/ic_delete" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEditMessage"
            style="@style/button_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            app:icon="@drawable/ic_edit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCopyMessage"
            style="@style/button_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            app:icon="@drawable/ic_copy" />

    </LinearLayout>


</FrameLayout>