<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.messenger.MessengerFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/messenger_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back_arrow"
            app:title="#general"
            app:titleTextAppearance="@style/toolbar_text" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/ed_type_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_search_view"
        android:hint="@string/write"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textColor="@color/message_text"
        android:textColorHint="@color/hint_message_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_send_message"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcMessages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/ed_type_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <LinearLayout
        android:id="@+id/ErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rcMessages"
        app:layout_constraintEnd_toEndOf="@id/rcMessages"
        app:layout_constraintStart_toStartOf="@+id/rcMessages"
        app:layout_constraintTop_toTopOf="@+id/rcMessages">

        <TextView
            android:id="@+id/tvErrorWithDatabase"
            style="@style/add_channel_common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_with_database" />

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_btn"
            android:text="@string/retry"
            android:textAppearance="@style/profile_btn_text" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_send_message"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_send_plus"
        app:layout_constraintBottom_toBottomOf="@id/ed_type_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ed_type_text" />

    <ProgressBar
        android:id="@+id/pbLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/ed_type_text"
        app:layout_constraintEnd_toEndOf="@+id/rcMessages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <ProgressBar
        android:id="@+id/pb_messages_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_send_message"
        app:layout_constraintEnd_toEndOf="@+id/btn_send_message"
        app:layout_constraintStart_toStartOf="@+id/btn_send_message"
        app:layout_constraintTop_toTopOf="@+id/btn_send_message" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabScrollDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="@string/fabscrolldown"
        android:focusable="true"
        android:src="@drawable/ic_scroll_down"
        app:fabCustomSize="40dp"
        app:maxImageSize="36dp"
        app:layout_constraintBottom_toTopOf="@+id/ed_type_text"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>